main.scss: fix breaking text on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -34,7 +34,9 @@ code {
 }
 
 img {
-  float: right !important;
   border-radius: 50% !important;
   margin: 1em !important;
+  @media (min-width: 395px) {
+    float: right !important;
+  }
 }
